Issue #106: Reworked deserialization of CommandResponses from JSON. * HTTP status is now validated; therefore a predicate has to be given to the deserializer. * Initialization of the deserializer is now clearly separated from actual deserialization. Thus, it is possible to reuse the same deserializer. * Exceptions within deserialization are now all wrapped by a JsonParseException with an appropriate message and cause. * Adjusted CommandResponses accordingly.
Signed-off-by: Juergen Fickel <juergen.fickel@bosch.io>